--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,8 @@ dependencies {
     implementation 'io.qameta.allure:allure-testng:2.27.0'
     implementation 'com.github.automatedowl:allure-environment-writer:1.0.0'
 
+    implementation 'ru.yandex.qatools.ashot:ashot:1.5.4'
+
 }
 
 test {
