--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,10 +1,10 @@
-base.url=https://app.dev.ggis.iccdev.ru
+base.url=https://google.com
 base.test.video.path=build/testvideo
 browser=chromium
 headless=false
 slow.motion=50
 timeout=20000
 video=true
-username=localuser-allroles
+username=ggis-admin
 password=1qaz!QAZ
 file_detector_included=false
