--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,7 +1,7 @@
 base.url=https://google.com
 base.test.video.path=build/testvideo
 browser=chromium
-headless=false
+headless=true
 slow.motion=50
 timeout=20000
 video=true
