--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,7 +1,7 @@
-base.url=https://google.com
+base.url=https://app.stage.ggis.iccdev.ru
 base.test.video.path=build/testvideo
 browser=chromium
-headless=true
+headless=false
 slow.motion=50
 timeout=20000
 video=true
